[project]
name = "mandarin-pronunciation-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chinesenumberutils>=1.1.2",
    "pyaudio>=0.2.14",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "xpinyin>=0.7.7",
]
[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
[project.scripts]
start = "main:main"

[tool.uv]
package = true
